# OcrParser

./: CMakeLists.txt  library.cpp  library.cu  library.cuh  library.h  pom.xml
.github/workflows/: build-dll.yml
src/main/java/org/example/: LinkCudaSO.java  Main.java  ProcessImage.java
src/main/java/org/example/Screen/: ScreenSelector.java
src/main/java/org/example/clipBoard/: CopyToClipBoard.java  GetFromClipBoard.java  ImageSelectWrapper.java
src/main/java/org/example/discovery/: MdnsDiscovery.java  PeerRegistry.java
src/main/java/org/example/link/: NativeLib.java
src/main/java/org/example/screen/: ScreenSelector.java
src/main/java/org/example/security/: InviteManager.java  KeyDerivation.java  SecureChannel.java
src/main/java/org/example/storage/: LocalDatabase.java  SyncRecord.java
src/main/java/org/example/sync/: ConflictResolver.java  DeltaCalculator.java  SyncManager.java  VectorClock.java
src/main/java/org/example/tesseractOCR/: FindTempFile.java
src/main/java/org/example/transport/: SyncClient.java  SyncMessageHandler.java  SyncServer.java
